--- a/publications/index.html
+++ b/publications/index.html
@@ -12,24 +12,24 @@
 
 
     <!-- Search Engine -->
-    <meta name="description" content="Publications of the Computational Pathology Group.">
+    <meta name="description" content="Diagnostic Image Analysis Group publications overview.">
     <meta name="image" content="https://beta.diagnijmegen.nl/images/computational_pathology_social_image.png">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Publications - Diagnostic Image Analysis Group">
-    <meta itemprop="description" content="Publications of the Computational Pathology Group.">
+    <meta itemprop="description" content="Diagnostic Image Analysis Group publications overview.">
     <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/computational_pathology_social_image.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Publications - Diagnostic Image Analysis Group">
-    <meta name="twitter:description" content="Publications of the Computational Pathology Group.">
+    <meta name="twitter:description" content="Diagnostic Image Analysis Group publications overview.">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/computational_pathology_social_image.png">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Publications - Diagnostic Image Analysis Group">
-    <meta property="og:description" content="Publications of the Computational Pathology Group.">
+    <meta property="og:description" content="Diagnostic Image Analysis Group publications overview.">
     <meta property="og:image" content="https://beta.diagnijmegen.nl/images/computational_pathology_social_image.png">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
