--- a/vacancies/phd-marble-clinical/index.html
+++ b/vacancies/phd-marble-clinical/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="We are offering a PhD position for our MARBLE project. In this project we will develop and validate artificial intelligence techniques for detection and classification of lesions on digital breast tomosynthesis and breast MRI.">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/marble_phd_ai_validation.png">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="PhD candidate to assess the value of Artificial Intelligence for Breast Cancer Screening - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="We are offering a PhD position for our MARBLE project. In this project we will develop and validate artificial intelligence techniques for detection and classification of lesions on digital breast tomosynthesis and breast MRI.">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/marble_phd_ai_validation.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="PhD candidate to assess the value of Artificial Intelligence for Breast Cancer Screening - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="We are offering a PhD position for our MARBLE project. In this project we will develop and validate artificial intelligence techniques for detection and classification of lesions on digital breast tomosynthesis and breast MRI.">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/marble_phd_ai_validation.png">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="PhD candidate to assess the value of Artificial Intelligence for Breast Cancer Screening - Diagnostic Image Analysis Group">
     <meta property="og:description" content="We are offering a PhD position for our MARBLE project. In this project we will develop and validate artificial intelligence techniques for detection and classification of lesions on digital breast tomosynthesis and breast MRI.">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/marble_phd_ai_validation.png">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -250,6 +250,7 @@
 
 
 
+    <img src="https://beta.diagnijmegen.nl/images/marble_phd_ai_validation.png" alt="PhD candidate to assess the value of Artificial Intelligence for Breast Cancer Screening" class="img-fluid">
 
     <div class="page-content">
         <h2>Project Description</h2>
