--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 
 
     <!-- Search Engine -->
-    <meta name="description" content="Homepage of Diagnostic Image Analysis Group">
+    <meta name="description" content="The Diagnostic Image Analysis Group is part of the Departments of Radiology and Nuclear Medicine, Pathology, and Ophthalmology of Radboud University Medical Center. We develop computer algorithms to aid clinicians in the interpretation of medical images and thereby improve the diagnostic process.">
     <meta name="image" content="https://beta.diagnijmegen.nl/images/missing_picture_social.png">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Diagnostic Image Analysis Group">
-    <meta itemprop="description" content="Homepage of Diagnostic Image Analysis Group">
+    <meta itemprop="description" content="The Diagnostic Image Analysis Group is part of the Departments of Radiology and Nuclear Medicine, Pathology, and Ophthalmology of Radboud University Medical Center. We develop computer algorithms to aid clinicians in the interpretation of medical images and thereby improve the diagnostic process.">
     <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/missing_picture_social.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Diagnostic Image Analysis Group">
-    <meta name="twitter:description" content="Homepage of Diagnostic Image Analysis Group">
+    <meta name="twitter:description" content="The Diagnostic Image Analysis Group is part of the Departments of Radiology and Nuclear Medicine, Pathology, and Ophthalmology of Radboud University Medical Center. We develop computer algorithms to aid clinicians in the interpretation of medical images and thereby improve the diagnostic process.">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/missing_picture_social.png">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Diagnostic Image Analysis Group">
-    <meta property="og:description" content="Homepage of Diagnostic Image Analysis Group">
+    <meta property="og:description" content="The Diagnostic Image Analysis Group is part of the Departments of Radiology and Nuclear Medicine, Pathology, and Ophthalmology of Radboud University Medical Center. We develop computer algorithms to aid clinicians in the interpretation of medical images and thereby improve the diagnostic process.">
     <meta property="og:image" content="https://beta.diagnijmegen.nl/images/missing_picture_social.png">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
