--- a/members/index.html
+++ b/members/index.html
@@ -413,6 +413,11 @@ This page is generated automatically. Please do not change the content of this p
     <h4 class="person-title"><small>PhD student</small></h4>
 </div>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+    <a href="https://beta.diagnijmegen.nl/members/patrick-brand/"><img data-src="https://beta.diagnijmegen.nl/images/people/Patrick_Brand-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Patrick Brand"></a>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/patrick-brand/">Patrick Brand</a></h3>
+    <h4 class="person-title"><small>PhD student</small></h4>
+</div>
+<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <a href="https://beta.diagnijmegen.nl/members/peter-bandi/"><img data-src="https://beta.diagnijmegen.nl/images/people/Péter_Bándi-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Péter Bándi"></a>
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/peter-bandi/">Péter Bándi</a></h3>
     <h4 class="person-title"><small>PhD student</small></h4>
