--- a/software/sol/index.html
+++ b/software/sol/index.html
@@ -363,11 +363,12 @@ built around SOL to other departments of Radboud University in 2019.</p>
     <img src="https://beta.diagnijmegen.nl/images/people/Person.png" class="img-thumbnail lazyload rounded-circle" alt=" Xie Weiyi">
     <h3 class="person-name"> Xie Weiyi</h3>
 </div>
-
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <img src="https://beta.diagnijmegen.nl/images/people/Person.png" class="img-thumbnail lazyload rounded-circle" alt=" Patrick Brand">
-    <h3 class="person-name"> Patrick Brand</h3>
-</div>        </div>
+    <a href="https://beta.diagnijmegen.nl/members/patrick-brand/"><img data-src="https://beta.diagnijmegen.nl/images/people/Patrick_Brand-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Patrick Brand"></a>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/patrick-brand/">Patrick Brand</a></h3>
+    <h4 class="person-title"><small>PhD student</small></h4>
+</div>
+        </div>
     </div>
 
     </div>
