--- a/members/index.html
+++ b/members/index.html
@@ -259,6 +259,21 @@ This page is generated automatically. Please do not change the content of this p
     <div class="container">
 
 
+                    <h1 class="text-muted">Chair</h1>
+                    <div class="row people-grid">
+
+<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+
+
+    <a href="https://beta.diagnijmegen.nl/members/bram-van-ginneken/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bram_van_Ginneken-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bram van Ginneken"></a>
+
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/bram-van-ginneken/">
+      Bram van Ginneken
+    </a></h3>
+
+    <h4 class="person-title"><small>Professor</small></h4>
+
+</div>
                     <h1 class="text-muted">Faculty</h1>
                     <div class="row people-grid">
 
