--- a/software/ophthalmology_workstation/index.html
+++ b/software/ophthalmology_workstation/index.html
@@ -277,7 +277,7 @@
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/harm-van-zeeland/"><img data-src="https://beta.diagnijmegen.nl/images/people/Harm_van_Zeeland-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Harm van Zeeland"></a>
+    <a href="https://beta.diagnijmegen.nl/members/harm-van-zeeland/"><img data-src="https://beta.diagnijmegen.nl/images/Harm_van_Zeeland.jpg" class="img-thumbnail rounded-circle lazyload" alt="Harm van Zeeland"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/harm-van-zeeland/">
       Harm van Zeeland
@@ -290,7 +290,7 @@
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/people/James_Meakin-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
+    <a href="https://beta.diagnijmegen.nl/members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/James_Meakin.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/james-meakin/">
       James Meakin
@@ -303,7 +303,7 @@
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/bart-liefers/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bart_Liefers-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bart Liefers"></a>
+    <a href="https://beta.diagnijmegen.nl/members/bart-liefers/"><img data-src="https://beta.diagnijmegen.nl/images/Bart_Liefers.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bart Liefers"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/bart-liefers/">
       Bart Liefers
@@ -316,7 +316,7 @@
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/clarisa-sanchez/"><img data-src="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg" class="img-thumbnail rounded-circle lazyload" alt="Clarisa Sánchez"></a>
+    <a href="https://beta.diagnijmegen.nl/members/clarisa-sanchez/"><img data-src="https://beta.diagnijmegen.nl/images/Clarisa_Sánchez.jpg" class="img-thumbnail rounded-circle lazyload" alt="Clarisa Sánchez"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/clarisa-sanchez/">
       Clarisa Sánchez
