--- a/software/sol/index.html
+++ b/software/sol/index.html
@@ -268,7 +268,7 @@ a centralized pool of GPGPUs. It is used to create state-of-the-art tools
 for detecting and classifying illnesses and quantify extent and identify possible
 treatment options for diseases.</p>
 <h2>Capacity/Activity</h2>
-<table class="table-striped table">
+<table class="table table-striped">
 <thead>
 <tr>
 <th>Resource</th>
@@ -337,7 +337,7 @@ built around SOL to other departments of Radboud University in 2019.</p>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/people/Paul_Konstantin_Gerke-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
+    <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/Paul_Konstantin_Gerke.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/">
       Paul Konstantin Gerke
@@ -350,7 +350,7 @@ built around SOL to other departments of Radboud University in 2019.</p>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/sil-van-de-leemput/"><img data-src="https://beta.diagnijmegen.nl/images/people/Sil_van_de_Leemput-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Sil van de Leemput"></a>
+    <a href="https://beta.diagnijmegen.nl/members/sil-van-de-leemput/"><img data-src="https://beta.diagnijmegen.nl/images/Sil_van_de_Leemput.jpg" class="img-thumbnail rounded-circle lazyload" alt="Sil van de Leemput"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/sil-van-de-leemput/">
       Sil van de Leemput
@@ -363,7 +363,7 @@ built around SOL to other departments of Radboud University in 2019.</p>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/thomas-de-bel/"><img data-src="https://beta.diagnijmegen.nl/images/people/Thomas_de_Bel.jpg" class="img-thumbnail rounded-circle lazyload" alt="Thomas de Bel"></a>
+    <a href="https://beta.diagnijmegen.nl/members/thomas-de-bel/"><img data-src="https://beta.diagnijmegen.nl/images/Thomas_de_Bel.jpg" class="img-thumbnail rounded-circle lazyload" alt="Thomas de Bel"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/thomas-de-bel/">
       Thomas de Bel
@@ -391,7 +391,7 @@ built around SOL to other departments of Radboud University in 2019.</p>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/patrick-brand/"><img data-src="https://beta.diagnijmegen.nl/images/people/Patrick_Brand-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Patrick Brand"></a>
+    <a href="https://beta.diagnijmegen.nl/members/patrick-brand/"><img data-src="https://beta.diagnijmegen.nl/images/Patrick_Brand.jpg" class="img-thumbnail rounded-circle lazyload" alt="Patrick Brand"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/patrick-brand/">
       Patrick Brand
