--- a/software/cirrus/index.html
+++ b/software/cirrus/index.html
@@ -276,7 +276,7 @@ The workstation is based on the MeVisLab software platform and is available thro
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/"><img data-src="https://beta.diagnijmegen.nl/images/Haimasree_Bhattacharya.jpg" class="img-thumbnail rounded-circle lazyload" alt="Haimasree Bhattacharya"></a>
+    <a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/"><img data-src="https://beta.diagnijmegen.nl/images/peopleHaimasree_Bhattacharya.jpg" class="img-thumbnail rounded-circle lazyload" alt="Haimasree Bhattacharya"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/">
       Haimasree Bhattacharya
@@ -289,7 +289,7 @@ The workstation is based on the MeVisLab software platform and is available thro
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/Paul_Konstantin_Gerke.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
+    <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/peoplePaul_Konstantin_Gerke.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/">
       Paul Konstantin Gerke
@@ -302,7 +302,7 @@ The workstation is based on the MeVisLab software platform and is available thro
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/colin-jacobs/"><img data-src="https://beta.diagnijmegen.nl/images/Colin_Jacobs.jpg" class="img-thumbnail rounded-circle lazyload" alt="Colin Jacobs"></a>
+    <a href="https://beta.diagnijmegen.nl/members/colin-jacobs/"><img data-src="https://beta.diagnijmegen.nl/images/peopleColin_Jacobs.jpg" class="img-thumbnail rounded-circle lazyload" alt="Colin Jacobs"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/colin-jacobs/">
       Colin Jacobs
@@ -315,7 +315,7 @@ The workstation is based on the MeVisLab software platform and is available thro
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/James_Meakin.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
+    <a href="https://beta.diagnijmegen.nl/members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/peopleJames_Meakin.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/james-meakin/">
       James Meakin
