--- a/software/cirruslungs/index.html
+++ b/software/cirruslungs/index.html
@@ -311,7 +311,7 @@ the case and proceeds with the next one.
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/"><img data-src="https://beta.diagnijmegen.nl/images/Haimasree_Bhattacharya.jpg" class="img-thumbnail rounded-circle lazyload" alt="Haimasree Bhattacharya"></a>
+    <a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/"><img data-src="https://beta.diagnijmegen.nl/images/people/Haimasree_Bhattacharya-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Haimasree Bhattacharya"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/">
       Haimasree Bhattacharya
@@ -324,7 +324,7 @@ the case and proceeds with the next one.
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/Paul_Konstantin_Gerke.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
+    <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/people/Paul_Konstantin_Gerke-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/">
       Paul Konstantin Gerke
@@ -337,7 +337,7 @@ the case and proceeds with the next one.
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/joep-kamps/"><img data-src="https://beta.diagnijmegen.nl/images/Joep_Kamps.jpg" class="img-thumbnail rounded-circle lazyload" alt="Joep Kamps"></a>
+    <a href="https://beta.diagnijmegen.nl/members/joep-kamps/"><img data-src="https://beta.diagnijmegen.nl/images/people/Joep_Kamps-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Joep Kamps"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/joep-kamps/">
       Joep Kamps
@@ -350,7 +350,7 @@ the case and proceeds with the next one.
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/colin-jacobs/"><img data-src="https://beta.diagnijmegen.nl/images/Colin_Jacobs.jpg" class="img-thumbnail rounded-circle lazyload" alt="Colin Jacobs"></a>
+    <a href="https://beta.diagnijmegen.nl/members/colin-jacobs/"><img data-src="https://beta.diagnijmegen.nl/images/people/Colin_Jacobs-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Colin Jacobs"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/colin-jacobs/">
       Colin Jacobs
@@ -368,7 +368,7 @@ the case and proceeds with the next one.
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/bram-van-ginneken/"><img data-src="https://beta.diagnijmegen.nl/images/Bram_van_Ginneken.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bram van Ginneken"></a>
+    <a href="https://beta.diagnijmegen.nl/members/bram-van-ginneken/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bram_van_Ginneken-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bram van Ginneken"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/bram-van-ginneken/">
       Bram van Ginneken
