--- a/members/rita-bylsma/index.html
+++ b/members/rita-bylsma/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Rita Bylsma (officially Bijlsma) is a research software engineer in the Diagnostic Image Analysis Group under supervision of James Meakin at the Radboudumc in Nijmegen. She does Linux system...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Person.png">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Rita_Bijlsma.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Rita Bylsma - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Rita Bylsma (officially Bijlsma) is a research software engineer in the Diagnostic Image Analysis Group under supervision of James Meakin at the Radboudumc in Nijmegen. She does Linux system...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Person.png">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Rita_Bijlsma.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Rita Bylsma - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Rita Bylsma (officially Bijlsma) is a research software engineer in the Diagnostic Image Analysis Group under supervision of James Meakin at the Radboudumc in Nijmegen. She does Linux system...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Person.png">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Rita_Bijlsma.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Rita Bylsma - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Rita Bylsma (officially Bijlsma) is a research software engineer in the Diagnostic Image Analysis Group under supervision of James Meakin at the Radboudumc in Nijmegen. She does Linux system...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Person.png">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Rita_Bijlsma.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Person.png">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Rita_Bijlsma.jpg">
                 <h1>Rita Bylsma</h1>
                 <h2 class="text-muted">Research Software Engineer</h2>
             </div>
@@ -274,6 +274,14 @@
 
 
 
+                <div class="row">
+                    <div class="col-1">
+                        <svg class="svg-icon svg-icon-linkedin"><use xlink:href="#icon-linkedin"></use></svg>
+                    </div>
+                    <div class="col">
+                        <a href="https://www.xing.com/profile/Rita_Bylsma; https://www.linkedin.com/in/rita-bijlsma-5885862/">LinkedIn</a>
+                    </div>
+                </div>
             </div>
         </div>
 
