--- a/highlights/tpami-tellez2019/index.html
+++ b/highlights/tpami-tellez2019/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://beta.diagnijmegen.nl/highlights/tpami-tellez2019/">
 
 
-    <title>Neural Image Compression for Gigapixel Histopathology Image Analysis.</title>
+    <title>Neural Image Compression for Gigapixel Histopathology Image Analysis</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="https://beta.diagnijmegen.nl/images/news/tpami_I.png">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Neural Image Compression for Gigapixel Histopathology Image Analysis.">
+    <meta itemprop="name" content="Neural Image Compression for Gigapixel Histopathology Image Analysis">
     <meta itemprop="description" content="David Tellez et al present a new method to train neural networks on gigapixel whole-slide images directly, avoiding the need for fine-grained annotations. Their work appeared online yesterday in IEEE TPAMI.">
     <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/news/tpami_I.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Neural Image Compression for Gigapixel Histopathology Image Analysis.">
+    <meta name="twitter:title" content="Neural Image Compression for Gigapixel Histopathology Image Analysis">
     <meta name="twitter:description" content="David Tellez et al present a new method to train neural networks on gigapixel whole-slide images directly, avoiding the need for fine-grained annotations. Their work appeared online yesterday in IEEE TPAMI.">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/news/tpami_I.png">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="Neural Image Compression for Gigapixel Histopathology Image Analysis.">
+    <meta property="og:title" content="Neural Image Compression for Gigapixel Histopathology Image Analysis">
     <meta property="og:description" content="David Tellez et al present a new method to train neural networks on gigapixel whole-slide images directly, avoiding the need for fine-grained annotations. Their work appeared online yesterday in IEEE TPAMI.">
     <meta property="og:image" content="https://beta.diagnijmegen.nl/images/news/tpami_I.png">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
@@ -246,7 +246,7 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/">Home</a></li>
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/highlights">Highlights</a></li>
-        <li class="breadcrumb-item">Neural Image Compression for Gigapixel Histopathology Image Analysis.</li>
+        <li class="breadcrumb-item">Neural Image Compression for Gigapixel Histopathology Image Analysis</li>
       </ol>
     </nav>
 </div>
@@ -254,7 +254,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1 class="page-title">Neural Image Compression for Gigapixel Histopathology Image Analysis.</h1>
+            <h1 class="page-title">Neural Image Compression for Gigapixel Histopathology Image Analysis</h1>
         </div>
     </div>
 
