--- a/highlights/index2.html
+++ b/highlights/index2.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://beta.diagnijmegen.nl/hightlights/">
 
 
-    <title>Highlights</title>
+    <title>Highlights.</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="https://beta.diagnijmegen.nl/images/social/missing_picture_social.png">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Highlights">
+    <meta itemprop="name" content="Highlights.">
     <meta itemprop="description" content="Highlights of Diagnostic Image Analysis Group.">
     <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/social/missing_picture_social.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Highlights">
+    <meta name="twitter:title" content="Highlights.">
     <meta name="twitter:description" content="Highlights of Diagnostic Image Analysis Group.">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/social/missing_picture_social.png">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="Highlights">
+    <meta property="og:title" content="Highlights.">
     <meta property="og:description" content="Highlights of Diagnostic Image Analysis Group.">
     <meta property="og:image" content="https://beta.diagnijmegen.nl/images/social/missing_picture_social.png">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
